# amplab2mml

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  output.json  output.xml  pyproject.toml  requirements.txt  uvicorn_logging.json
.github/workflows/: deploy.yaml  tests.yml
app/: api.py  cli.py  csv_export.py  diff.py  excel_export.py  html_report.py  logging_setup.py  main.py  pipeline.py  schemas.py  stats.py  validators.py
app/builders/: b2mml_builder.py
app/models/: classes.py  equipment.py  properties.py
app/parsers/: ampla_parser.py
app/transformers/: ampla_to_b2mml.py  normalize.py
config/: mapping.toml
tests/: conftest.py  test_api.py  test_b2mml_builder.py  test_class_inheritance.py  test_cli.py  test_csv_export.py  test_diff.py  test_excel_export.py  test_full_names.py  test_html_report.py  test_normalize.py  test_parsing.py  test_property_merging.py  test_regression.py  test_roundtrip.py  test_stats.py  test_transformer_end_to_end.py  test_validators.py
tests/data/: sample_ampla.xml  sample_b2mml_expected.xml
