[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-to-b2mml"
version = "0.1.0"
description = "Ampla to B2MML transformer"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
b2mml = "app.cli:main"
